# Local_Sensing_and_Perception

./: README.md
.github/workflows/: sync-2-upstream.yml
docker/localSPdocker/: Dockerfile  ros_entrypoint.sh
docker/localSPdocker/FIROS_config_localSP/: config.json  robotdescriptions.json  robots.json  whitelist.json
src/localization_and_mapping/: README.md
src/localization_and_mapping/andymark_driver/: CMakeLists.txt  README.md  package.xml
src/localization_and_mapping/andymark_driver/launch/: andymark.launch
src/localization_and_mapping/andymark_driver/src/: holonomic.cpp
src/localization_and_mapping/firos_config/: config.json  robotdescriptions.json  robots.json  whitelist.json
src/localization_and_mapping/husky/husky_control/launch/: teleop.launch
src/localization_and_mapping/husky/husky_description/launch/: description.launch
src/localization_and_mapping/lam_simulator/: CMakeLists.txt  README.md  package.xml
src/localization_and_mapping/lam_simulator/launch/: AndaOmnidriveamcltestZagrebdemo.launch  CHEMIamcltest.launch  IMLamcltest.launch  amcl_omnisim.launch  amcl_omnisimCHEMI.launch  amcl_omnisimdemo.launch  amcl_test_muraplast.launch  gmapping_omnisim.launch  gmapping_test_muraplast.launch
src/localization_and_mapping/lam_simulator/world/: andaomnidriveamcltest.world  floormap_CHEMI.world  floormap_IML.world  floormap_muraplast.world
src/localization_and_mapping/lam_simulator/world/elements/: map.inc  pioneer.inc  sick2.inc
src/localization_and_mapping/lam_simulator/yaml/: Andamapa.yaml  CHEMIchangedres.yaml  IMLlab.yaml  floorplan_muraplast.yaml  map.world  map.yaml
src/localization_and_mapping/odometry_correction/: CMakeLists.txt  README.md  package.xml
src/localization_and_mapping/odometry_correction/launch/: odometry_with_imu.launch
src/localization_and_mapping/odometry_correction/src/: odometry_add_covar.py  pose_to_odometry_topic.py
src/localization_and_mapping/sensing_and_perception/: CMakeLists.txt  local_robot.launch  local_robot_sim.launch  package.xml  send_posewithcovariance.launch
src/localization_and_mapping/sensing_and_perception/src/: pubPoseWithCovariance.cpp
src/maplistener/: CMakeLists.txt  package.xml
src/maplistener/src/: main.cpp  show_map.py
src/maptogridmap/: CMakeLists.txt  package.xml  singlerobot.rviz
src/maptogridmap/include/: gmap.h
src/maptogridmap/launch/: Andamapa.yaml  IMLlab.yaml  annotations.ini  annotationstero.ini  demo_3.yaml  floorplanMP.yaml  startmapserver.launch  startmapserversergei.launch  startmapservertero.launch  startmaptogridmap.launch  tero.yaml  topology.launch
src/maptogridmap/msg/: Annotation.msg  Annotations.msg  Graph.msg  Gridmap.msg  Vertex.msg
src/maptogridmap/src/: gmap.cpp  main.cpp  mux_topics.py  mux_topicsmap.py
src/maptogridmap/srv/: GetMap.srv
src/mapupdates/: CMakeLists.txt  package.xml
src/mapupdates/include/: mapup.h
src/mapupdates/launch/: startmapupdates.launch
src/mapupdates/src/: l2pc.py  main.cpp  mapupd.cpp
src/mars_agent_physical_robot_msgs/: .gitlab-ci.yml
src/mars_common_msgs/: .gitlab-ci.yml
test/: docker-compose.yml
test/localsp/: amcltestmap.launch  amcltestmap_sim.launch  demo.world  demo.yaml  demo_map.yaml  local_robot.launch  local_robot_sim.launch  robotslocalsp.json  whitelistlocalsp.json
test/ran/: opil_finnland.world  opil_finnland_simulation.launch  opil_finnland_simulation_no_mapserver.launch
test/ran/mod_iot_ran/launch/: mod_iot_ran.launch  mod_iot_ran_no_fakelocalization.launch
